# CS-FaMAF

./: .gitignore  README.md
1/Algoritmos I/: README.md
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/: .gitmodules  .travis.yml  README.md  hal-gui.cabal  hal.ui  stack.yaml
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/.stack-work/install/x86_64-linux/lts-9.6/8.0.2/flag-cache/: equ-0.2.1-IrbkmeDYIk3D2O8lOMIqnj  fun-0.2-LQ7ADCNCDalBrxECoXDVDG  gtksourceview2-0.13.3.1-FGvNZgrSAbEEQUjbvcwaKO  hal-0.0.1-4tP6Mxw9QsPCrbyKVlPdDZ  reference-0.1-9TVNHElMCF41xo612DykAC
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/Examples/: ciclo2.lisa  expresiones2.lisa  fibonacci.lisa
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/HGUI/: AxiomList.hs  Config.hs  Console.hs  EvalConsole.hs  ExtendedLang.hs  File.hs  GState.hs  Gui.hs  Main.hs  Parser.hs  TextPage.hs  Utils.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/HGUI/Evaluation/: Eval.hs  EvalState.hs  TranslateLang.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/HGUI/sourceview/language-specs/: fun.lang  lisa.lang
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/HGUI/sourceview/styles/: fun.xml  lisa.xml
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/Language/: ListAssoc.hs  Semantics.hs  Syntax.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/: README.md  fun.cabal
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/: Decl.hs  Declarations.hs  Derivation.hs  Environment.hs  Module.hs  Parser.hs  Theories.hs  Theory.hs  TypeChecker.hs  Verification.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Decl/: Error.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Derivation/: Derivation.hs  Error.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Eval/: Eval.hs  Rules.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/FunTheories/: Arith.hs  FOL.hs  List.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Module/: Error.hs  Graph.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Parser/: Decl.hs  Internal.hs  Module.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/Fun/Verification/: Error.hs  Verification.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/: README.md  equ.cabal
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/: Exercise.hs  IndType.hs  IndTypes.hs  Matching.hs  PreExpr.hs  Proof.hs  Rewrite.hs  Syntax.hs  Theories.hs  TypeChecker.hs  Types.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/Exercise/: Conf.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/Parser/: Expr.hs  Proof.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/PreExpr/: Internal.hs  Monad.hs  Show.hs  Symbols.hs  Zipper.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/Proof/: Annot.hs  Condition.hs  Error.hs  Induction.hs  ListedProof.hs  Monad.hs  Proof.hs  Zipper.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/Theories/: AbsName.hs  Arith.hs  Common.hs  FOL.hs  List.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/Equ/TypeChecker/: Error.hs  Proof.hs  State.hs  Unification.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/ProofExamples/: asocConcat.proof  instanciacion.proof  neuterSumInduction.proof
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/TestSuite/: Test.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/TestSuite/Tests/: Proof.hs  TypeChecker.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/fun/equ/docs/: modules.txt  requirements.txt  testing.txt
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/: README.md  hal.cabal
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/Examples/: div.lisa
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/Hal/: Lang.hs  Parser.hs  Symbols.hs  TypeCheck.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/Hal/Evaluation/: EvalLang.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/Hal/Interpreter/: Console.hs  Interpreter.hs  Parser.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/Hal/Verification/: THoare.hs  VerCond.hs  WeakPre.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/: equ.cabal
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/: Exercise.hs  Expr.hs  IndType.hs  IndTypes.hs  Matching.hs  Parser.hs  PreExpr.hs  Proof.hs  Rewrite.hs  Rule.hs  Syntax.hs  Theories.hs  TypeChecker.hs  Types.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/Exercise/: Conf.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/Matching/: Error.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/Parser/: Expr.hs  Proof.hs  Types.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/PreExpr/: Eval.hs  Internal.hs  Subst.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/Proof/: Annot.hs  Condition.hs  Error.hs  Induction.hs  ListedProof.hs  Monad.hs  Proof.hs  Zipper.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/Theories/: Arith.hs  Common.hs  FOL.hs  List.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/Equ/TypeChecker/: Error.hs  Unification.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/ProofExamples/: andDerivation.proof  fakeInduction.proof  lengthConcat.proof  simpleWithQuant.proof  sumDerivation.proof  test.proof
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/TestSuite/Tests/: Matching.hs  Parser.hs  PreExpr.hs  Rules.hs  Samples.hs
1/Algoritmos I/Proyectos/proy3/HAL/hal-gui/hal-gui-master/hal/equ/docs/: design.tex
1/Analisis I/: README.md
(+872 files in other folders)
