Name:                hal-gui
Description: Entorno de desarrollo de programas en el lenguaje LISA.
Version:             0.1.0.0
License:             GPL
License-file:        LICENSE
Author:              Renato Cherini, Alejandro Gadea, Emmanuel Gunther, Miguel Pagano
Maintainer:          Miguel Pagano <pagano@famaf.unc.edu.ar>
Category:            Graphical User Interface
Build-type:          Simple
Cabal-Version:       >=1.2
Tested-with:         GHC==6.10.1
Build-type:          Simple
Bug-reports:         https://github.com/alexgadea/hal-gui/issues


Source-repository this
    Type:     git
    Location: https://github.com/alexgadea/hal-gui
    Branch:   master

Executable hal-gui
    buildable: True
    HS-Source-Dirs: .
    Main-is: HGUI/Main.hs
    GHC-options: -Odph -Wall -threaded
    Build-depends:       base, hal, fun, containers >= 0.4, reference >= 0.1, 
                         text >= 0.11.1.5, gtk >= 0.12.1, 
                         equ >= 0.2, bytestring >= 0.9.1.10, cereal >= 0.3.3.0,
                         glib >= 0.12.1, filepath >= 1.2.0.0, strict >= 0.3.2,
                         pango >= 0.12.1, random >= 1.0.0.3,
                         transformers >= 0.2.2.0, fun, lens >= 3.9,
                         utf8-string >= 0.3, MissingH, gtksourceview2,
                         parsec >= 3, stm, mtl, process, template-haskell
